devel
-----

* Added new stage "instantiating executors" to the query profiling output.
  The time spent in "instantiating executors" is the time needed to create
  the query executors from the final query execution time. In cluster mode,
  this stage also includes the time needed for physically distributing the 
  query snippets to the participating database servers.
  Previously, the time spent for instantiating executors and the physical
  distribution was contained in the "optimizing plan" stage, which was
  misleading.

* Remove constant values for query variables from query plan serialization 
  in cases they were not needed. Previously, constant values of query variables
  were always serialized for all occurrences of a variable in a query plan.
  If the constant values were large, this contributed to higher serialization
  and thus query setup times. Now the constant values are only serialized
  for relevant parts of query execution plans.

* BTS-199: remove check for environment variable `GLIBCXX_FORCE_NEW` from 
  server start, and remove setting this variable from startup scripts. 
  The reason is that the environment variable only controls the behavior of
  programs linked against glibc, but our release builds are linked to libmusl.

* Make the cache_oblivious option of jemalloc configurable from the
  environment and set its default to `false`. This helps to save
  4096 bytes of RAM for every allocation which is at least 16384 bytes
  large. This is particularly beneficial for the RocksDB buffer cache.

* Updated ArangoDB Starter to 0.15.6-preview-1.

* Acquire a snapshot of the (list of) indexes when starting document insert, 
  update/replace and remove operations, and use that snapshot throughout the 
  operation. Previously, the list of indexes was acquired multiple times during
  a write operation, and it was (at least in theory) possible that the list of
  indexes changed between the individual acquistions.